Fix image size on mobile and list alignment

--- a/styles.css
+++ b/styles.css
@@ -31,23 +31,25 @@ h3 {
 }
 
 p {
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 ul {
-    list-style: none;
     padding-left: 0;
 }
 
+h2 + ul > li {
+    list-style: none;
+}
+
 h3 + ul > li {
-    list-style: disc;
-    padding-left: 10px;
     text-align: left;
 }
 
 ol {
     text-align: left;
-    padding-left: 10px;
+    padding: 0;
+    
 }
 
 li {
@@ -63,4 +65,9 @@ a:hover {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    max-height: 400px;
 }
